rsfg/tests/scripts/error/multiple-errors.sfg
fn main()
	first_error

fn two()
	second_error

fn three()
	if third_error
		fourth_error

